# chickencoop-v2

./: .env.example  .gitignore  .pylintrc  PRODUCTION_DEPLOYMENT_TODO.md  coverage.json  deploy.sh  lambda_handler.py  pyproject.toml  requirements-dev.txt  requirements-pi.txt  requirements.txt
.github/workflows/: main.yml
config/systemd/: chickencoop-monitor.service
infrastructure/: main.tf
scripts/: auto-update.sh  install-services.sh  manage-services.sh
scripts/deployment/: fetch-lambda-urls.sh  health-check.sh
src/: __init__.py  exceptions.py  main.py
src/alerting/: aggregation.py  routing.py  webhooks.py
src/api/: __init__.py
src/aws/: __init__.py
src/backup/: __init__.py  data_backup.py  failover.py  recovery.py
src/camera_intelligence/: counting.py
src/command_queue/: queue.py
src/config/: aws_config.json  config.json  config.py  coop1.json  environment.py  loader.py  validation.py
src/models/: base.py  chicken.py  sensor.py  video.py
src/observability/: metrics.py  performance.py  tracing.py
src/persistence/: __init__.py  base.py  csv_storage.py  database.py
src/rbac/: permissions.py  roles.py
src/resilience/: __init__.py  connection_retry.py  data_sync.py  local_storage.py  offline_manager.py  sync_handlers.py  sync_models.py
src/security/: audit.py  auth.py  authorization.py  cors.py  csrf.py  headers.py  presigned_urls.py  rate_limiter.py  secrets.py  validation.py
src/services/: __init__.py  alert_service.py  (+2 more)
tdd/: PHASE1_QUICKSTART.md  README.md  TDD_CATALOG.md  conftest.py  pytest.ini
webapp/: package.json
(+161 files in other folders)
